# rules_mcp

./: .env  .mcp.json  CLAUDE.md  README.md  README_IMPLEMENTATION_STATUS.md  claude_mcp_config.json  pyproject.toml  requirements.txt  setup_claude_mcp.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
.roo/: mcp.json
config/rules/: global.yaml  individual.yaml  project.yaml
docs/: MCP_INTEGRATION.md  MCP_SETUP_GUIDE.md  QUICK_START.md  README.md  SETUP.md  USAGE.md  WORKING_STATUS.md  claude_code_summary.md
ref/: urls.md
scripts/: debug_mcp.py  minimal_mcp_test.py  setup.sh  simple_test.py  test_mcp.py  test_stdio.py  test_working_mcp.py
src/rule_manager/: __init__.py  main.py  server.py
src/rule_manager/core/: dsl.py  engine.py
src/rule_manager/models/: base.py  errors.py  settings.py
src/rule_manager/storage/: base.py  yaml_store.py
src/rule_manager/utils/: logging.py
tests/: conftest.py
tests/unit/: test_dsl.py  test_models.py  test_yaml_store.py
